---
source: gedcomfy/tests/tests.rs
description: "0 HEAD\r\n1 GEDC\r\n2 VERS 5.5.1\r\n1 CHAR ANSEL\r\n0 MACRON¯\r\n0 TRLR\r\n"
expression: "format!(\"{:?}\", miette::Report::new(err))"
input_file: gedcomfy/tests/encoding_inputs/ansel_specified_malformed_badchar.ged
---
gedcom::parse_error::invalid_tag

  × An error occurred while parsing the GEDCOM file
  ├─▶ GEDCOM file contains a syntax error
  ╰─▶ Invalid character in tag
  help: tag names must begin with either an uppercase letter or underscore, followed by letters or numbers
